<resources>
    <string name="app_name">智慧农业</string>
    <string name="usernameHint">请输入您的用户名</string>
    <string name="passwordHint">请输入密码</string>
    <string name="login">立 即 登 录</string>
    <string name="loginFooter1">Copyright © 2019 </string>
    <string name="loginFooter2">杭商院 </string>
    <string name="loginFooter3">. All right reserved </string>
    <string name="no_account_register">没有账号?立即注册</string>
    <string name="register">立 即 注 册</string>
    <string name="name">姓名</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="password2">确认密码</string>
    <string name="cellphone">电话</string>
    <string name="email">邮箱</string>
    <string name="choose_img">选择头像</string>
    <string name="submit_register">提 交 注 册</string>
    <string name="add_operation_log">添加操作日志</string>
    <string name="add_device_data">添加设备日志</string>
    <string name="add_new_farm">添加新农场</string>
    <string name="scan_qr_code">扫描农场二维码</string>
    <string name="operation_log">操作日志</string>
    <string name="device_data">设备记录</string>
    <string name="farm_info">农场信息</string>
    <string name="logout">退出登录</string>
    <string name="operator">操作员</string>
    <string name="typename_id">%s%d</string>
    <string name="my_farms">我负责的农场</string>
    <string name="specific_operation_record">具体操作记录</string>
    <string name="commit">提交</string>
    <string name="cancel">取消</string>
    <string name="detailed_data">详细数据</string>
    <string name="spinner_error">请选择设备</string>
    <string name="itlg_operator">智慧农业操作员</string>
    <string name="product_mall">农产品商城</string>
    <string name="farm_mall">农田商城</string>
    <string name="news">新闻资讯</string>
    <string name="mime">我的</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">我的购物车</string>
    <string name="more">更多</string>
    <string name="watch_all">查看全部</string>
    <string name="my_own_farms">我拥有的农场</string>
    <string name="cart_empty">购物车是空的,犒劳下自己吧</string>
    <string name="go_shopping">去逛逛</string>
    <string name="search_hint">水果蔬菜家畜</string>
    <string name="search">搜索</string>
    <string name="price">￥%.1f</string>
    <string name="welcome">Hi，%s</string>
    <string name="intelligent_agriculture">INTELLIGENT AGRICULTURE</string>
    <string name="huinong">慧农</string>
    <string name="last_news">最新新闻</string>
    <string name="news_icon">NEW</string>
    <string name="sale_icon">SALE</string>
    <string name="one">1</string>
    <string name="buy_spot">购买现货</string>
    <string name="tips">标签:</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="operator_format">操作员:%s</string>
    <string name="operation_format">操作内容:%s</string>
    <string name="device_data_format">传感器:%s</string>
    <string name="total_price">总价:</string>
    <string name="pay">付款</string>
    <string name="count">数量:%d</string>
    <string name="sure">确定</string>
    <string name="geolocation">地理位置:</string>
    <string name="product_list">农产品清单</string>
    <string name="buy">购 买</string>
    <string name="sold">已售</string>
    <string name="longitude">经度:%f</string>
    <string name="latitude">纬度:%f</string>
    <string name="last_operation_log">近期操作记录</string>
    <string name="watch_monitor">查看监控</string>
    <string name="monitor_starting">正在开启监控</string>
    <string name="userLogin">慧农用户登录</string>

</resources>
